[gd_scene load_steps=3 format=3 uid="uid://o6ehsaqic4vv"]

[ext_resource type="Script" uid="uid://nfpnmk5lc86t" path="res://addons/quest_weaver/nodes/flow/jump_node/jump_node_editor.gd" id="1_5acln"]

[sub_resource type="DPITexture" id="DPITexture_5acln"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="JumpNodeEditor" type="VBoxContainer"]
script = ExtResource("1_5acln")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TargetNameEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CopyTargetButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Copy Objective ID to clipboard"
icon = SubResource("DPITexture_5acln")
flat = true
